--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -12,17 +12,17 @@
             <img src="/assets/img/map.png" alt=""> 
     </div>
     <div class="innerBtns">
-        <button class="normal-btn" (mousedown)="navTo('map')">
-            {{'Camp map'| text}}
+        <button class="normal-btn" (mousedown)="navTo('awoff')">
+            {{'WATAN offices'| text}}
         </button>
-        <button class="normal-btn" (mousedown)="navTo('asas')">
-            {{'Sectors and services'|text}}
+        <button class="normal-btn" (mousedown)="navTo('asasw')">
+            {{'Websites & Platforms'|text}}
         </button>
         <button class="normal-btn" (mousedown)="navTo('asccm')">
-            {{'Contact camp management'|text}}
+            {{'Program WATAN'|text}}
         </button>
-        <button class="normal-btn" (mousedown)="navTo('acl')">
-            {{'Camp location'|text}}
+        <button class="normal-btn" (mousedown)="navTo('aswne')">
+            {{'WATAN News'|text}}
         </button>
     </div>
 </div>
