--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,8 @@
-<img src="/assets/general/logo.png" alt="" width="200px">
-<div class="back" >
-    <img src="/assets/general/Watan-logo.png" alt="" width="40px">
+<div class="top">
+    <img src="/assets/general/logo.png" alt="" width="200px" style="margin: auto;">
+    <div class="back">
+        <img src="/assets/general/Watan-logo.png" alt="" width="40px">
+    </div>
 </div>
 <div class="main-content">
     <div class="menu-btn" (mousedown)="goTo('awareness')">
@@ -21,7 +23,7 @@
     </div>
     <div class="menu-btn" (mousedown)="goTo('about')">
         <img src="/assets/img/info.png" alt="" class="icon">
-        <p>{{'About Watan'|text}}</p>
+        <p>{{'About WATAN'|text}}</p>
     </div>
     <div class="white-space"></div>
 </div>
