--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -37,7 +37,7 @@
 </div>
 <div class="btn-holder" *ngIf="!isLoggedIn">
     <div class="text">
-        {{'Welcome to Watan camp'| text}} <br>
+        {{'Welcome to WATAN camp'| text}} <br>
         {{'to see the content of this page'|text}}<br>
         <b>{{'Please sign in!'|text}}</b>
     </div>
