--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
     <div class="camp" *ngIf="camp&&!adminPanel" (mousedown)="goToCampSelection()"><img src="assets/img/appicon.png"
             alt=""> {{camp}}</div>
     <div class="lang" *ngIf="lang&&!adminPanel" (mousedown)="goTolanguageSelection()">
-        {{lang}}</div>
+        {{langsDic[lang]}}</div>
     <tab-bar class="tab-bar" *ngIf="camp && loggedIn&&!adminPanel"></tab-bar>
 </ion-app>
