--- a/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.html
+++ b/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.html
@@ -1,8 +1,10 @@
 <div class="header">
-<h1>{{'Provide multi sectoral assistance project'| text}}</h1>
-    
+    <h1>{{'Provide multi sectoral assistance project'| text}}</h1>
+
 </div>
-<div class="wrappar">
+
+<report-items-view *ngIf="dbData" [body]="dbData"></report-items-view>
+<div *ngIf="!dbData" class="wrappar">
     <div class="details" *ngFor="let item of data">
         <div class="line">
             <div class="left">{{'governorate'|text}}:</div>
@@ -34,4 +36,3 @@
     </mat-icon>
 </button>
 <div class="white-space"></div>
-
