chore: fixes, watan changes, first store upload

--- a/src/app/admin-layout/admin-layout.component.html
+++ b/src/app/admin-layout/admin-layout.component.html
@@ -5,7 +5,7 @@
             <ion-content>
                 <ion-list lines="none">
                     <ion-list-header>
-                        Conference
+                        My Camp - WATAN
                     </ion-list-header>
                     <ng-container *ngFor="let p of appPages; let i = index">
                         <ion-menu-toggle autoHide="false" *ngIf="p.show">
