--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -50,7 +50,7 @@
   overflow: auto;
   gap: 30px;
   background-color: white;
-  padding: 35px 0 0 0;
+//   padding: 35px 0 0 0;
 
   .graphs {
     margin-top: 10px;
