--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,6 +1,6 @@
 <div class="header">
-    <img src="/assets/img/report.png" alt="">
     <div class="title">{{'About'|text}}</div>
+    <img src="/assets/img/report.png" alt="">
     <button class="back" (click)="back()">
         <mat-icon>
             keyboard_backspace
@@ -8,9 +8,9 @@
     </button>
 </div>
 <div class="btns">
-    <div class="graphs">
+    <!-- <div class="graphs">
             <img src="/assets/img/map.png" alt=""> 
-    </div>
+    </div> -->
     <div class="innerBtns">
         <button class="normal-btn" (mousedown)="navTo('awoff')">
             {{'WATAN offices'| text}}
