--- a/src/app/home/reports/needs/needs.component.scss
+++ b/src/app/home/reports/needs/needs.component.scss
@@ -30,7 +30,7 @@
     border-radius: 25px 25px 0 0;
     height: calc(100vh - 150px);
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -74,7 +74,7 @@
     }
 
     img {
-        max-width: 150px;
+        max-width: 100px;
     }
 }
 .back{
@@ -83,8 +83,8 @@
     background-color: var(--color-secondry);
     border-radius: 50%;
     position: absolute;
-    bottom: 60px;
-    right: 10px;
+    top: 138px;
+    left: 5px;
     font-size: 0.6em !important;
     color: var(--color-light);
     display: flex;
