--- a/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.scss
+++ b/src/app/home/reports/provide-multi-sectoral/provide-multi-sectoral.component.scss
@@ -19,8 +19,9 @@
 
     h1 {
         text-align: center;
-        font-size: 1.2em;
+        font-size: 1em;
         line-height: 1.3;
+        font-weight: 400;
     }
 }
 
@@ -30,7 +31,7 @@
     border-radius: 25px 25px 0 0;
     height: calc(100vh - 150px);
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -65,7 +66,7 @@
     }
 
     img {
-        max-width: 150px;
+        max-width: 100px;
     }
 }
 .back{
@@ -74,8 +75,8 @@
     background-color: var(--color-secondry);
     border-radius: 50%;
     position: absolute;
-    bottom: 60px;
-    right: 10px;
+    top: 138px;
+    left: 5px;
     font-size: 0.6em !important;
     color: var(--color-light);
     display: flex;
